Continue with XML comparer